--- a/Chrome/public/index.html
+++ b/Chrome/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Blocker</title>
+    <title>uFilter</title>
 
     <link rel="stylesheet" href="/public/styles/styles.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -45,7 +45,7 @@
   	<div class="container" id="main">
 
   		<!-- <img src="/public/img/soothe-label-white.png" id="logo"> -->
-<h1>Blocker</h1>
+<h1>uFilter</h1>
 		<div class="mdl-grid">
 
 		  <div class="mdl-cell mdl-cell--4-col">
